Fixed bug #41983 (Error Fetching http headers terminated by '\n')

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@240252 c90b9560-bf6c-de11-be94-00142212c4b1